# tuib

./: Cargo.toml
src/: app.rs  lib.rs  main.rs
src/api/: endpoint.rs  mod.rs  search.rs
src/api/instance/: fetcher.rs  mod.rs
src/ui/: handlers.rs  mod.rs  routers.rs
src/ui/browser/: handler.rs  mod.rs  renderer.rs  router.rs
src/ui/header/: header.txt  mod.rs  renderer.rs
src/ui/info/: mod.rs  renderer.rs
src/ui/interface/: handler.rs  mod.rs  renderer.rs  router.rs
src/ui/search_bar/: handler.rs  mod.rs  renderer.rs  router.rs
