[package]
name = "tuib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compound_duration = "1.2.1"
crossterm = "0.27.0"
httptest = "0.15.5"
ratatui = "0.26.1"
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
